Closed Bug 812430 Opened 13 years ago Closed 13 years ago

[SETTINGS][BLUETOOTH] First time connected by laptop would crash the phone

Categories

(Firefox OS Graveyard :: General, defect, P1)

x86_64
Linux
defect

Tracking

(blocking-basecamp:+, firefox18 fixed, firefox19 fixed, firefox20 fixed)

VERIFIED FIXED
blocking-basecamp +
Tracking Status
firefox18 --- fixed
firefox19 --- fixed
firefox20 --- fixed

People

(Reporter: wachen, Assigned: gyeh)

References

Details

Attachments

(2 files, 1 obsolete file)

*Environment: Phone - Unagi gaia master(git): 487a7c18c8ff08db7d2e76239e85e3e5eefcc8b7 gecko aurora(hg): 0d76df6f808d Please note that this bug is not reproducible in Otoro phone *How to reproduce: 0. Make sure "Settings" app got killed 1. Go to "Settings" > "Bluetooth" 2. Enable Bluetooth, and set "Visible to all" 3. Pair it from laptop *Expected Result: showing message of pin and laptop name *Actual Result: shows empty screen with 2 lines *sidenote: only valid when settings first run. (otherwise, you need to kill settings to redo it)
Attached image pic
blocking-basecamp: --- → ?
Component: General → Gaia::Settings
I followed the reproduce steps, but the result is different: B2G phone crashed after receiving pairing message This issue is resolved in the patch. Please help to verify. Thanks.
Assignee: nobody → gyeh
Attachment #683053 - Flags: review?(echou)
Comment on attachment 683053 [details] [diff] [review] Patch 1(v1): Clear bluetooth signal table while process is killed Review of attachment 683053 [details] [diff] [review]: ----------------------------------------------------------------- r+ with nit addressed. ::: dom/bluetooth/BluetoothManager.cpp @@ +62,5 @@ > + if (v.type() != BluetoothValue::TArrayOfBluetoothNamedValue) { > + NS_WARNING("Not a BluetoothNamedValue array!"); > + SetError(NS_LITERAL_STRING("BluetoothReplyTypeError")); > + return false; > + } v.type() has to be BluetoothValue::TArrayOfBluetoothNamedValue, otherwise it would be a serious error. How about using MOZ_ASSERT() here?
Attachment #683053 - Flags: review?(echou) → review+
Depends on: 813440
During the process, Gina figured out stuffs related with crashing system when pairing. The empty system message was found in bug 813440. After bug 813440 solved, I will be verifying both fix simultaneously. (mark as depends on 813440 since there were 2 issues in this bug)
Status: NEW → ASSIGNED
blocking-basecamp: ? → +
Priority: -- → P1
Casey, can you provide the expected result specs here?
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Hi, Please refer to my comment 6. I think my English is too bad for people to understand after several bugzilla misunderstood. Let me list it here: 1. That fix was to fix the crashing of system found during the reproduction of this bug. 2. The empty message issue still occurred 3. I will be verifying both of them simultaneously after Gina finished it.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Since we got another bug tracking on empty system message, this one can closed for fixing the crashing issue. Thanks
Status: REOPENED → RESOLVED
Closed: 13 years ago13 years ago
No longer depends on: 813440
Resolution: --- → FIXED
Summary: [SETTINGS][BLUETOOTH] First time connected by laptop would show empty pairing message → [SETTINGS][BLUETOOTH] First time connected by laptop would crash the phone
Blocks: 815325
Component: Gaia::Settings → General
https://releases.mozilla.com/b2g/ verified in 20121212 build
Status: RESOLVED → VERIFIED
QA Contact: wachen
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: