Bug 812430 - Patch 1: First time connected by laptop would show empty pairing message, r=echou